--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: python
 python:
 - 2.7
 install:
-- pip install -r requirements.txt --use-mirrors
+- pip install -r requirements.txt
 script:
 - make publish
 notifications:
