--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,9 @@ notifications:
     on_failure: never
 after_success: bash deploy.sh
 before_install:
-- openssl aes-256-cbc -K $encrypted_e173943ba804_key -iv $encrypted_e173943ba804_iv
-  -in publish-key.enc -out publish-key -d
+- openssl aes-256-cbc -K $encrypted_e173943ba804_key -iv $encrypted_e173943ba804_iv -in publish-key.enc -out publish-key -d
+- chmod 600 publish-key
+- eval `ssh-agent -s`
+- ssh-add publish-key
+
+
